--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ langgraph = "0.2.74"
 langchain-community = "^0.3.18"
 streamlit = "^1.42.2"
 tqdm = "^4.67.1"
+numpy = "^1.23"
 
 
 [build-system]
