--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ langchain-community = "^0.3.18"
 streamlit = "^1.42.2"
 tqdm = "^4.67.1"
 numpy = "^1.23"
+nest-asyncio = "^1.6.0"
 
 
 [build-system]
