--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,7 @@ nest-asyncio = "^1.6.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[settings]
+date = "2025-03-06"         
+timeout = 60  
