--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ streamlit = "^1.42.2"
 tqdm = "^4.67.1"
 numpy = "^1.23"
 nest-asyncio = "^1.6.0"
+langchain-google-genai = "^2.0.11"
 
 
 [build-system]
