--- a/reac_agent/requirements.txt
+++ b/reac_agent/requirements.txt
@@ -19,10 +19,17 @@ dataclasses-json==0.6.7 ; python_version >= "3.11" and python_version < "4.0"
 debugpy==1.8.12 ; python_version >= "3.11" and python_version < "4.0"
 decorator==5.2.1 ; python_version >= "3.11" and python_version < "4.0"
 executing==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
+filetype==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
 frozenlist==1.5.0 ; python_version >= "3.11" and python_version < "4.0"
 gitdb==4.0.12 ; python_version >= "3.11" and python_version < "4.0"
 gitpython==3.1.44 ; python_version >= "3.11" and python_version < "4.0"
+google-ai-generativelanguage==0.6.16 ; python_version >= "3.11" and python_version < "4.0"
+google-api-core[grpc]==2.24.1 ; python_version >= "3.11" and python_version < "4.0"
+google-auth==2.38.0 ; python_version >= "3.11" and python_version < "4.0"
+googleapis-common-protos==1.69.1 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==3.1.1 ; python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.11"
+grpcio-status==1.70.0 ; python_version >= "3.11" and python_version < "4.0"
+grpcio==1.70.0 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.11" and python_version < "4.0"
 httpx-sse==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -40,6 +47,7 @@ jupyter-client==8.6.3 ; python_version >= "3.11" and python_version < "4.0"
 jupyter-core==5.7.2 ; python_version >= "3.11" and python_version < "4.0"
 langchain-community==0.3.18 ; python_version >= "3.11" and python_version < "4.0"
 langchain-core==0.3.40 ; python_version >= "3.11" and python_version < "4.0"
+langchain-google-genai==2.0.11 ; python_version >= "3.11" and python_version < "4.0"
 langchain-text-splitters==0.3.6 ; python_version >= "3.11" and python_version < "4.0"
 langchain==0.3.19 ; python_version >= "3.11" and python_version < "4.0"
 langgraph-checkpoint==2.0.16 ; python_version >= "3.11" and python_version < "4.0"
@@ -66,11 +74,14 @@ pillow==11.1.0 ; python_version >= "3.11" and python_version < "4.0"
 platformdirs==4.3.6 ; python_version >= "3.11" and python_version < "4.0"
 prompt-toolkit==3.0.50 ; python_version >= "3.11" and python_version < "4.0"
 propcache==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
+proto-plus==1.26.0 ; python_version >= "3.11" and python_version < "4.0"
 protobuf==5.29.3 ; python_version >= "3.11" and python_version < "4.0"
 psutil==7.0.0 ; python_version >= "3.11" and python_version < "4.0"
 ptyprocess==0.7.0 ; python_version >= "3.11" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
 pure-eval==0.2.3 ; python_version >= "3.11" and python_version < "4.0"
 pyarrow==19.0.1 ; python_version >= "3.11" and python_version < "4.0"
+pyasn1-modules==0.4.1 ; python_version >= "3.11" and python_version < "4.0"
+pyasn1==0.6.1 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "4.0" and (implementation_name == "pypy" or platform_python_implementation == "PyPy")
 pydantic-core==2.27.2 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-settings==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -88,6 +99,7 @@ requests-toolbelt==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.11" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.11" and python_version < "4.0"
 rpds-py==0.23.1 ; python_version >= "3.11" and python_version < "4.0"
+rsa==4.9 ; python_version >= "3.11" and python_version < "4"
 six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 smmap==5.0.2 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
